[tool.poetry]
name = "django-local-library"
version = "0.1.0"
description = ""
authors = ["liupeng <lponline21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.11"
django = "^5.0.4"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
